--- a/index.html
+++ b/index.html
@@ -3,23 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MJF Tech.</title>
+  <title>Will you be my valentine?</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <div class="nav-logo"></div>
-            <div class="nav-links">
-            <a href="#">Home</a>
-            <a href="#">Services</a>
-            <a href="#">Projects</a>
-            <a href="#">Contact</a>
-        </div>
-    </nav>
-
-    <main>
-
-    </main>
-
 </body>
 </html>
