--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     }
 
     #yesBtn:hover {
-      transform: scale(1.05);
+      transform: scale(1.20);
     }
 
     #noBtn {
@@ -119,7 +119,7 @@
           background:#f6c1d1;
           text-align:center;
         ">
-          <h1>💖 YAY!!! 💖<br>You made my day 🥰</h1>
+          <h1> YAY!! Flowers are coming soon!!</h1>
         </div>
       `;
     });
