--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <body>
   <div class="card">
-    <div class="emoji">🐱💗</div>
+    <div class="emoji">💗</div>
     <h1>nirali will you be my valentine?</h1>
 
     <div class="buttons">
@@ -86,7 +86,7 @@
       <button id="noBtn">No</button>
     </div>
 
-    <div class="hint">"No" seems a bit shy 😈</div>
+    <div class="hint">The "No" button seems a bit shy haha</div>
   </div>
 
   <script>
