--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           background:#f6c1d1;
           text-align:center;
         ">
-          <h1> YAY!! Flowers are coming soon!!</h1>
+          <h1> YAY!! Flowers are coming soon!! Make sure you're free on the 14th 😉</h1>
         </div>
       `;
     });
