--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <body>
   <div class="card">
     <div class="emoji">💗</div>
-    <h1>nirali will you be my valentine?</h1>
+    <h1>Piper Tinory will you be my valentine?</h1>
 
     <div class="buttons">
       <button id="yesBtn">Yes</button>
