--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
           text-align:center;
         ">
           <h1> YAY!! Flowers are coming soon!! Make sure you're free on the 14th 😉</h1>
+          <img src="celebrate.gif" style="max-width:300px;" />
         </div>
       `;
     });
