--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <title>Will You Be My Valentine?</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- Confetti Library -->
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+
   <style>
     body {
       margin: 0;
@@ -14,16 +17,18 @@
       align-items: center;
       justify-content: center;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+      overflow: hidden;
     }
 
     .card {
-      background: #fff;
+      background: white;
       padding: 40px;
       border-radius: 20px;
       text-align: center;
-      width: 320px;
-      box-shadow: 0 15px 40px rgba(0,0,0,0.15);
+      width: 340px;
+      box-shadow: 0 20px 50px rgba(0,0,0,0.2);
       position: relative;
+      z-index: 2;
     }
 
     .emoji {
@@ -44,7 +49,7 @@
 
     button {
       border: none;
-      padding: 12px 24px;
+      padding: 12px 26px;
       font-size: 16px;
       border-radius: 30px;
       cursor: pointer;
@@ -57,7 +62,7 @@
     }
 
     #yesBtn:hover {
-      transform: scale(1.20);
+      transform: scale(1.08);
     }
 
     #noBtn {
@@ -73,10 +78,22 @@
       color: #777;
       margin-top: 10px;
     }
+
+    #celebrate {
+      display: none;
+      margin-top: 20px;
+    }
+
+    #celebrate img {
+      max-width: 260px;
+      border-radius: 14px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+    }
   </style>
 </head>
 
 <body>
+
   <div class="card">
     <div class="emoji">💗</div>
     <h1>Piper Tinory will you be my valentine?</h1>
@@ -86,15 +103,21 @@
       <button id="noBtn">No</button>
     </div>
 
-    <div class="hint">The "No" button seems a bit shy haha</div>
+    <div class="hint">The "No" seems a bit shy HAHA</div>
+
+    <div id="celebrate">
+      <img src="celebrate.webp" alt="celebration" />
+      <h2>YAY!! Be free on the 14th!!!😉</h2>
+    </div>
   </div>
 
   <script>
     const noBtn = document.getElementById("noBtn");
+    const yesBtn = document.getElementById("yesBtn");
 
+    // No button dodges
     noBtn.addEventListener("mouseenter", () => {
       const card = document.querySelector(".card");
-
       const cardRect = card.getBoundingClientRect();
       const btnRect = noBtn.getBoundingClientRect();
 
@@ -108,22 +131,26 @@
       noBtn.style.top = `${y}px`;
     });
 
-    document.getElementById("yesBtn").addEventListener("click", () => {
-      document.body.innerHTML = `
-        <div style="
-          height:100vh;
-          display:flex;
-          align-items:center;
-          justify-content:center;
-          font-family:system-ui;
-          background:#f6c1d1;
-          text-align:center;
-        ">
-          <h1> YAY!! Flowers are coming soon!! Make sure you're free on the 14th 😉</h1>
-          <img src="celebrate.gif" style="max-width:300px;" />
-        </div>
-      `;
+    // YES button celebration
+    yesBtn.addEventListener("click", () => {
+      document.querySelector(".buttons").style.display = "none";
+      document.querySelector(".hint").style.display = "none";
+      document.getElementById("celebrate").style.display = "block";
+
+      // Confetti burst
+      confetti({
+        particleCount: 150,
+        spread: 70,
+        origin: { y: 0.6 }
+      });
+
+      // Extra side bursts
+      setTimeout(() => {
+        confetti({ particleCount: 100, angle: 60, spread: 55, origin: { x: 0 } });
+        confetti({ particleCount: 100, angle: 120, spread: 55, origin: { x: 1 } });
+      }, 300);
     });
   </script>
+
 </body>
 </html>
